--- a/src/app/loading-dialog/loading-dialog.component.html
+++ b/src/app/loading-dialog/loading-dialog.component.html
@@ -1,2 +1,5 @@
 
-<mat-spinner id="progress"></mat-spinner>
+<div fxLayout="column" fxLayoutAlign="center center">
+    <mat-spinner id="progress" diameter="60" ></mat-spinner>
+    <mat-label fxFlexOffset="10px" class="small-label">Loading...</mat-label>
+</div>
