--- a/src/app/feature-modules/patients/meetup-lobby/meetup-lobby.component.scss
+++ b/src/app/feature-modules/patients/meetup-lobby/meetup-lobby.component.scss
@@ -227,6 +227,18 @@
       height: fit-content;
   }
  
+  .current-patient-bg{
+    background-color: $light-green;
+  }
+  .processed-icon{
+    font-size: 16px;
+
+  }
+  .pending-icon {
+    font-size: 16px;
+    color: $warn;
+  }
+  
 
 // .temp{
 //     width: 0;
