--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -129,6 +129,10 @@ div::-webkit-scrollbar-thumb {
   font-size: x-large;
 }
 
+.highlighted-text{
+  color: $icon;
+}
+
 .timer-box {
   width: fit-content;
   height: fit-content;
